# waylay-sdk-storage-py

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python.yml
.openapi-generator/: FILES
docs/: AUTH.md  AboutApi.md  AuthenticationConfig.md  BUCKETCREATIONSTATUS.md  BUCKETPOLICYSTATUS.md  Bucket.md  BucketApi.md  BucketConfiguration.md  BucketListing.md  BucketObject.md  BucketObjectListing.md  CHANNELTYPE.md  Channel.md  Channel1.md  EVENTTYPE.md  EventFilter.md  Expiry.md  HALEntity.md  HALLink.md  HTTPMETHOD.md  HTTPValidationError.md  Links.md  LinksValue.md  LocationInner.md  NotificationQueueStatus.md  NotificationQueueStatusReport.md  ObjectApi.md  Operation.md  PayloadConfig.md  QUEUESETUPSTATUS.md  Resource.md  ResponseList.md  ResponseListObject.md  S3PolicyDef.md  S3PolicyStatement.md  SIGN.md  STORETYPE.md  Store.md  SubscriptionApi.md  SubscriptionConfig.md  (+17 more)
openapi/: storage.openapi.yaml  storage.transformed.openapi.yaml
test/: __init__.py  conftest.py  openapi.py
test/_run/: storage.openapi.yaml  storage.transformed.openapi.yaml
test/_run/openapi/: storage.openapi.yaml.json  storage.transformed.openapi.yaml.json
test/api/: __init__.py  about_api_test.py  bucket_api_test.py  object_api_test.py  subscription_api_test.py
test/types/: __init__.py  auth_stub.py  authentication_config_stub.py  bucket_configuration_stub.py  bucket_listing_stub.py  bucket_object_listing_stub.py  bucket_object_stub.py  bucket_stub.py  bucketcreationstatus_stub.py  bucketpolicystatus_stub.py  channel1_stub.py  channel_stub.py  channeltype_stub.py  event_filter_stub.py  eventtype_stub.py  expiry_stub.py  hal_entity_stub.py  hal_link_stub.py  http_validation_error_stub.py  httpmethod_stub.py  links_stub.py  links_value_stub.py  location_inner_stub.py  notification_queue_status_report_stub.py  notification_queue_status_stub.py  payload_config_stub.py  queuesetupstatus_stub.py  resource_stub.py  response_list_object_stub.py  response_list_stub.py  s3_policy_def_stub.py  s3_policy_statement_stub.py  sign_stub.py  store_stub.py  storetype_stub.py  subscription_config_input_stub.py  subscription_config_output_stub.py  subscription_config_stub.py  subscriptions_listing_stub.py  subscriptions_stub.py  (+13 more)
waylay-sdk-storage/: LICENSE.txt  README.md  pyproject.toml
waylay-sdk-storage-types/: README.md  pyproject.toml
waylay-sdk-storage-types/.openapi-generator/: FILES
waylay-sdk-storage-types/src/waylay/services/storage/models/: __init__.py  auth.py  authentication_config.py  bucket.py  bucket_configuration.py  bucket_listing.py  bucket_object.py  bucket_object_listing.py  bucketcreationstatus.py  bucketpolicystatus.py  channel.py  channel1.py  channeltype.py  event_filter.py  eventtype.py  expiry.py  hal_entity.py  hal_link.py  http_validation_error.py  httpmethod.py  links.py  links_value.py  location_inner.py  notification_queue_status.py  notification_queue_status_report.py  object.py  payload_config.py  queuesetupstatus.py  resource.py  response_list.py  response_list_object.py  s3_policy_def.py  s3_policy_statement.py  sign.py  store.py  storetype.py  subscription_config.py  subscription_config_input.py  subscription_config_output.py  subscriptions.py  (+14 more)
waylay-sdk-storage-types/src/waylay/services/storage/queries/: __init__.py  about_api.py  bucket_api.py  object_api.py  subscription_api.py
waylay-sdk-storage/.openapi-generator/: FILES
waylay-sdk-storage/src/waylay/services/storage/api/: __init__.py  about_api.py  bucket_api.py  object_api.py  subscription_api.py
waylay-sdk-storage/src/waylay/services/storage/service/: __init__.py  service.py
