[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waylay-sdk-storage-types"
version = "v0.4.0-0"
description = "Waylay Storage Types "
authors = [
    { name = "Waylay", email = "dev@waylay.io"}
]
keywords = ["Waylay Storage" , "Types"]
requires-python = ">= 3.9"
dependencies = [
    
    "pydantic ~= 2.6",
    "typing-extensions ~= 4.10",
    "eval-type-backport ~= 0.1.3; python_version < '3.10'",
]


[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "types-python-jose",
    "types-appdirs",
    "types-python-dateutil",
    "pytest",
    "pytest-mock",
    "pytest-httpx",
    "pytest-asyncio",
    "starlette",
    "python-multipart",
    "typeguard",
    "pyyaml",

    #### following deps need to be specified manually until https://github.com/ghandic/jsf/pull/104 is included
    "jsf@git+https://github.com/simon-schoonjans/jsf@waylay_main",
    "faker>=15.3.4",
    "jsonschema>=4.17.3",
    "rstr>=3.2.0",
    "smart-open[http]>=6.3.0",
    ####
]


[tool.setuptools.packages.find]
where = ["src/"]
namespaces = true

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
ignore-init-module-imports = true
# allow duplicate imports
ignore=["F811"]
# https://docs.astral.sh/ruff/rules
select=["UP007", "FA102"] # convert Union to | (pep-604)

[tool.ruff.lint.per-file-ignores]
# do not touch imports here
"__init__.py" = ["F401"]
"conftest.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"