[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waylay-sdk-storage-types"
version = "0.9.0rc20260304"
description = "Waylay Storage Types "
authors = [
    { name = "Waylay", email = "info@waylay.io"}
]
keywords = ["Waylay Storage" , "Types"]
requires-python = ">= 3.10"
dependencies = [
    "waylay-sdk-core ~= 1.0",
    "waylay-sdk-storage == 0.9.0rc20260304",
]
readme = "README.md"
license={file = "LICENSE.txt"}

[project.urls]
Homepage = "https://www.waylay.io/"
Documentation = "https://docs.waylay.io/#/api/sdk/waylay-sdk/"
Repository = "https://github.com/waylayio/waylay-sdk-storage-py.git"
"Openapi Specification" = "https://docs.waylay.io/openapi/public/redocly/storage.html"

[project.optional-dependencies]
dev = [
    "blacken-docs",
    "mypy",
    "ruff",
    "types-python-jose",
    "types-appdirs",
    "types-python-dateutil",
    "pytest",
    "pytest-mock",
    "pytest-httpx",
    "pytest-asyncio",
    "starlette",
    "python-multipart",
    "typeguard",
    "pyyaml",
    "jsf >= 0.11.1",
]



[tool.setuptools.packages.find]
where = ["src/"]
namespaces = true

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules
select= [
    "E", 
    "F",
    "UP", 
    "B",
    "SIM",
    "I", # sort and remove unused imports
    "FA",
    "RET",
    "PIE",
    "ARG",
    "TC",
]
ignore=[
    "E501",  # line-too-long
    "TC001",  # pydantic validation needs model imports them at runtime
]

[tool.ruff.lint.per-file-ignores]
# do not touch imports here
"__init__.py" = ["F401"]
"conftest.py" = ["F401"]
# pydantic models needs all imports at runtime, not just for type checking
"**/models/**/*.py" = ["TC001", "TC002", "TC003"]

[tool.pytest.ini_options]
asyncio_mode = "auto"